# default-app-py

./: .gitignore  Makefile  README.md  pyproject.toml
conf/: test.toml
docker/: .env  docker-compose.yaml  filebeat.yml  init.sql  logstash.conf  metricbeat.yml
docs/: architecture.excalidraw  developer.md
requirements/: dev.in  prod.in
src/defaultapp/cmd/: cmd.py
src/defaultapp/core/model/: __init__.py  base.py  log.py
src/defaultapp/core/repo/: log.py
src/defaultapp/lib/: cache.py  ctx.py  exc.py  redis_.py
src/defaultapp/lib/events/: __init__.py  kafka_.py  redis_.py
src/defaultapp/tests/core/repo/: conftest.py  test_log.py
src/defaultapp/tests/fixtures/: psql.py
src/defaultapp/tests/lib/: conftest.py  test_cache.py  test_cfg.py  test_ctx.py
src/defaultapp/tests/lib/events/: test_kafka.py
src/defaultapp/tests/web/: conftest.py  test_foo.py  test_log.py  test_root.py
src/defaultapp/web/: app.py  server.py
src/defaultapp/web/backend/: root.py
src/defaultapp/web/backend/lib/: auth.py  marshal.py  util.py  validation.py
src/defaultapp/web/backend/routes/: __init__.py  api.py  foo.py  log.py
